[package]
name = "kernel"
version = "0.1.0"
authors = ["James <j.w.tooke@gmail.com>"]
edition = "2018"

# [lib]
# name = "kernel"
# path = "src/lib.rs"
# crate-type = ["staticlib"]

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["register"]
bsp_rpi4 = ["register"]

[dependencies]

# Optional dependencies
register = { version = "1.x.x", optional = true }

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }